--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
+    "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
+    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
