--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-typing-effect": "^2.0.5",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "tailwindcss": "^3.0.23",
